bekerja dengan console internal page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+
 </head>
 
 <body>
     <h1> Hello World! </h1>
 
-
+    <script>
+        var x = 10;
+        console.log("Hello World!!");
+        console.log("isi dari variabel X adalah " + x);
+    </script>
 </body>
 
 </html>
