tambah pesan Alert

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
     <h1> Hello World! </h1>
 
-    <script>
-        var x = 10;
-        console.log("Hello World!!");
-        console.log("isi dari variabel X adalah " + x);
+    <script src="script.js">
     </script>
 </body>
 
