--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1> Hello World! </h1>
 
     <script src="script.js">
+        //script ini akan mengabil seluruh isi dalam page script .js
     </script>
 </body>
 
