--- a/latihan/fuction.html
+++ b/latihan/fuction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Latihan Random matc</title>
+    <title> Latihan Fuction</title>
 </head>
 
 <body>
