add Header Pages

--- a/latihan/CSS Latihan/Shandika Galih/latihan1.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.html
@@ -5,10 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latihan -1 Box Model </title>
+    <link rel="stylesheet" href="latihan1.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="header">
+            <div class="judul">
+                <h1>Rannulis</h1>
+            </div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">List</a></li>
+                <li><a href="#">About</a></li>
+                <li> <a href="#">Comment</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div class="hero"></div>
+        <div class="content"></div>
+        <div class="footer"></div>
+    </div>
 </body>
 
 </html>
