menambahkan hero pada page latihan

--- a/latihan/CSS Latihan/Shandika Galih/latihan1.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.html
@@ -22,8 +22,10 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
-        <div class="hero"></div>
+        <div class="hero">
+        </div>
         <div class="content"></div>
+
         <div class="footer"></div>
     </div>
 </body>
