membuat div content

--- a/latihan/CSS Latihan/Shandika Galih/latihan1.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.html
@@ -24,8 +24,23 @@
         </div>
         <div class="hero">
         </div>
-        <div class="content"></div>
-
+        <div class="content">
+            <h2>Belajar Nulis</h2>
+            <p class="penulis">ditulis Oleh <a href="#">Rannu Mianda</a> pada tanggal 24 April 2020</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta odit natus nisi rerum. Autem eaque officia
+                dolorem ea facere minus? Voluptas a tempora veniam assumenda sit unde quam tenetur in!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae placeat in nihil eveniet, voluptas
+                iure suscipit quis labore ducimus voluptate, atque illum, accusantium quam harum nam quae similique
+                nostrum doloribus ex praesentium officiis? Pariatur exercitationem animi maxime dolor deleniti et
+                placeat illum. Enim pariatur ex blanditiis quasi, reprehenderit hic odit, nisi in adipisci tempore quod
+                accusantium sint aperiam provident repudiandae labore illo nesciunt laudantium autem, numquam temporibus
+                culpa assumenda! Autem, inventore vel labore hic architecto voluptate consectetur voluptates doloribus
+                repudiandae tenetur eveniet quod molestiae, voluptatibus, possimus esse. Fugit eligendi culpa vel
+                recusandae itaque saepe repudiandae nobis distinctio necessitatibus consectetur! Vero.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nostrum obcaecati praesentium, aut, ullam
+                earum fugiat aspernatur perferendis facilis soluta illum aliquid quam. Doloribus quod facere autem non
+                fugiat aliquid?</p>
+        </div>
         <div class="footer"></div>
     </div>
 </body>
