--- a/latihan/CSS Latihan/Shandika Galih/latihan1.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.html
@@ -37,11 +37,18 @@
                 culpa assumenda! Autem, inventore vel labore hic architecto voluptate consectetur voluptates doloribus
                 repudiandae tenetur eveniet quod molestiae, voluptatibus, possimus esse. Fugit eligendi culpa vel
                 recusandae itaque saepe repudiandae nobis distinctio necessitatibus consectetur! Vero.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nostrum obcaecati praesentium, aut, ullam
-                earum fugiat aspernatur perferendis facilis soluta illum aliquid quam. Doloribus quod facere autem non
-                fugiat aliquid?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi et ratione repellat voluptatum optio
+                tempore nulla id atque. Repellendus quisquam nisi atque veritatis saepe alias quis laboriosam cum odit
+                minima inventore, sunt vel! Iusto numquam reiciendis vel. Itaque debitis earum reprehenderit! Temporibus
+                cupiditate similique reiciendis quos, quidem, quod beatae soluta cumque quibusdam iste nesciunt! Vel,
+                temporibus tempore aspernatur error corporis laboriosam sint similique necessitatibus molestias ducimus
+                fuga eius quisquam a iusto adipisci! Facere incidunt ipsum delectus nemo numquam aut consequatur quia
+                minima pariatur minus velit, nostrum optio, dolorum quis voluptatibus, nulla et quisquam? Qui quas
+                repellat, cum quam eius obcaecati.</p>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <p class="copy">Copyright 2020. Rannu Mianda</p>
+        </div>
     </div>
 </body>
 
