--- a/latihan/CSS Latihan/Shandika Galih/latihan2.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan -1 Box Model </title>
+    <title>Latihan -2 Box Model Float </title>
     <link rel="stylesheet" href="latihan2.css">
 </head>ssss
 
