latihan2 membuat sidbar mengunakan float

--- a/latihan/CSS Latihan/Shandika Galih/latihan2.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latihan -2 Box Model Float </title>
     <link rel="stylesheet" href="latihan2.css">
-</head>ssss
+</head>
 
 <body>
     <div class="container">
@@ -24,28 +24,49 @@
         </div>
         <div class="hero">
         </div>
-        <div class="content">
-            <h2>Belajar Nulis</h2>
-            <p class="penulis">ditulis Oleh <a href="#">Rannu Mianda</a> pada tanggal 24 April 2020</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta odit natus nisi rerum. Autem eaque officia
-                dolorem ea facere minus? Voluptas a tempora veniam assumenda sit unde quam tenetur in!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae placeat in nihil eveniet, voluptas
-                iure suscipit quis labore ducimus voluptate, atque illum, accusantium quam harum nam quae similique
-                nostrum doloribus ex praesentium officiis? Pariatur exercitationem animi maxime dolor deleniti et
-                placeat illum. Enim pariatur ex blanditiis quasi, reprehenderit hic odit, nisi in adipisci tempore quod
-                accusantium sint aperiam provident repudiandae labore illo nesciunt laudantium autem, numquam temporibus
-                culpa assumenda! Autem, inventore vel labore hic architecto voluptate consectetur voluptates doloribus
-                repudiandae tenetur eveniet quod molestiae, voluptatibus, possimus esse. Fugit eligendi culpa vel
-                recusandae itaque saepe repudiandae nobis distinctio necessitatibus consectetur! Vero.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi et ratione repellat voluptatum optio
-                tempore nulla id atque. Repellendus quisquam nisi atque veritatis saepe alias quis laboriosam cum odit
-                minima inventore, sunt vel! Iusto numquam reiciendis vel. Itaque debitis earum reprehenderit! Temporibus
-                cupiditate similique reiciendis quos, quidem, quod beatae soluta cumque quibusdam iste nesciunt! Vel,
-                temporibus tempore aspernatur error corporis laboriosam sint similique necessitatibus molestias ducimus
-                fuga eius quisquam a iusto adipisci! Facere incidunt ipsum delectus nemo numquam aut consequatur quia
-                minima pariatur minus velit, nostrum optio, dolorum quis voluptatibus, nulla et quisquam? Qui quas
-                repellat, cum quam eius obcaecati.</p>
+        <div class="content cf">
+            <div class="maincontent">
+                <h2>Belajar Nulis</h2>
+                <p class="penulis">ditulis Oleh <a href="#">Rannu Mianda</a> pada tanggal 24 April 2020</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta odit natus nisi rerum. Autem eaque
+                    officia
+                    dolorem ea facere minus? Voluptas a tempora veniam assumenda sit unde quam tenetur in!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae placeat in nihil eveniet,
+                    voluptas
+                    iure suscipit quis labore ducimus voluptate, atque illum, accusantium quam harum nam quae similique
+                    nostrum doloribus ex praesentium officiis? Pariatur exercitationem animi maxime dolor deleniti et
+                    placeat illum. Enim pariatur ex blanditiis quasi, reprehenderit hic odit, nisi in adipisci tempore
+                    quod
+                    accusantium sint aperiam provident repudiandae labore illo nesciunt laudantium autem, numquam
+                    temporibus
+                    culpa assumenda! Autem, inventore vel labore hic architecto voluptate consectetur voluptates
+                    doloribus
+                    repudiandae tenetur eveniet quod molestiae, voluptatibus, possimus esse. Fugit eligendi culpa vel
+                    recusandae itaque saepe repudiandae nobis distinctio necessitatibus consectetur! Vero.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi et ratione repellat voluptatum optio
+                    tempore nulla id atque. Repellendus quisquam nisi atque veritatis saepe alias quis laboriosam cum
+                    odit
+                    minima inventore, sunt vel! Iusto numquam reiciendis vel. Itaque debitis earum reprehenderit!
+                    Temporibus
+                    cupiditate similique reiciendis quos, quidem, quod beatae soluta cumque quibusdam iste nesciunt!
+                    Vel,
+                    temporibus tempore aspernatur error corporis laboriosam sint similique necessitatibus molestias
+                    ducimus
+                    fuga eius quisquam a iusto adipisci! Facere incidunt ipsum delectus nemo numquam aut consequatur
+                    quia
+                    minima pariatur minus velit, nostrum optio, dolorum quis voluptatibus, nulla et quisquam? Qui quas
+                    repellat, cum quam eius obcaecati.</p>
+            </div>
+            <div class="secondcontent">
+                <h3>Tentang Penulis</h3>
+                <img src="gambar/Rannu.PNG" alt="Rannu Mianda" width="50px" height="70px">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, nesciunt pariatur culpa numquam
+                    quibusdam perspiciatis animi atque modi laboriosam veniam eum iure cumque suscipit distinctio sed
+                    earum?
+                    Inventore, dolor amet.</p>
+            </div>
         </div>
+
         <div class="footer">
             <p class="copy">Copyright 2020. Rannu Mianda</p>
         </div>
