menambahkan element overfow dan tambha text di secondcontent

--- a/latihan/CSS Latihan/Shandika Galih/latihan2.html
+++ b/latihan/CSS Latihan/Shandika Galih/latihan2.html
@@ -64,6 +64,14 @@
                     quibusdam perspiciatis animi atque modi laboriosam veniam eum iure cumque suscipit distinctio sed
                     earum?
                     Inventore, dolor amet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eius nobis rerum voluptates fuga neque
+                    quasi, sit, officiis deserunt unde quae tempore repellat error est iure distinctio aliquid esse
+                    earum blanditiis iste enim tenetur eaque nemo? Molestias provident quos nobis delectus! Praesentium
+                    ipsa similique unde itaque nostrum quis animi nesciunt pariatur beatae saepe necessitatibus rem
+                    voluptatum odio ratione error, minima consectetur nobis fuga harum soluta recusandae voluptatibus!
+                    Aspernatur et deserunt nam repellat minima! Harum necessitatibus tempora tenetur aperiam odit,
+                    beatae aliquam quam voluptatum incidunt sed ad, ipsam nostrum unde eaque distinctio sit eum ducimus
+                    obcaecati. Adipisci doloribus sunt autem aliquid?</p>
             </div>
         </div>
 
